--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.5.2"
+    "react-intersection-observer": "^9.5.2",
+    "react-wrap-balancer": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
