--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
     "react-wrap-balancer": "^1.1.0"
   },
