--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
+    "react-text-transition": "^3.1.0",
     "react-wrap-balancer": "^1.1.0"
   },
   "devDependencies": {
