--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.5.6",
+    "@svgr/webpack": "^8.1.0",
     "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
